# simple_client_server

./: CMakeLists.txt  README.md  tasks_list
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
command_line_args_parser/: CMakeLists.txt  command_line_args_parser.cpp  command_line_args_parser.hpp
logger/: CMakeLists.txt  logger.cpp  logger.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
socket_lib/: CMakeLists.txt  socket.cpp  socket.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/command_line_args_parser/: CMakeLists.txt  command_line_args_parser.cpp  command_line_args_parser.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/socket/: CMakeLists.txt  tcpSocket.cpp  tcpSocket.hpp
src/socket_lib/: CMakeLists.txt
